samples/_failures_safe/1761689750_dd3ed9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f305624.c: In function ‘main’:
./samples/SAFE/__tmp_5f305624.c:200:5: error: expected expression at end of input
  200 |     for (
      |     ^~~
./samples/SAFE/__tmp_5f305624.c:200:5: error: expected declaration or statement at end of input
